# pvr.argustv

./: 01-jsoncpp-add-cmake-buildsystem.patch  CMakeLists.txt  FindJsonCpp.cmake
debian/: control
depends/common/jsoncpp/: CMakeLists.txt  flags.txt
lib/tsreader/: CMakeLists.txt
pvr.argustv/: addon.xml
src/: EventsThread.h  KeepAliveThread.cpp  KeepAliveThread.h  activerecording.h  argustvrpc.cpp  channel.h  client.cpp  client.h  epg.h  guideprogram.h  pvrclient-argustv.cpp  pvrclient-argustv.h  recording.h  recordinggroup.h  recordingsummary.h  tools.cpp  tools.h  upcomingrecording.h  utils.cpp  utils.h
src/lib/tsreader/: FileReader.cpp  FileReader.h  MultiFileReader.cpp  TSReader.cpp  TSReader.h
